// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile Component Rendering should render all profile sections with correct props 1`] = `
<div
  class="MuiBox-root css-2b0dhr"
  data-testid="profile-content-a7f8e4b2-9c3d-4a1e-8f6b-2d3e4a5b6c7d"
>
  <div
    class="MuiStack-root css-4otudh-MuiStack-root"
  >
    <div
      data-testid="profile-card"
    >
      ProfileCard: 
      John Doe
      , 
      Lusaka
      , 
      University of Zambia
      , 
      Computer Science
      , 
      2024
      ,
       
      loaded
    </div>
    <div
      data-testid="module-progress-card"
    >
      ModuleProgressCard: 
      2
       modules
    </div>
    <div
      data-testid="skills-discovered-card"
    >
      SkillsDiscoveredCard: 
      0
       skills, 
      loaded
    </div>
    <div
      class="MuiStack-root css-vtfvzf-MuiStack-root"
    >
      <div
        data-testid="security-card"
      >
        SecurityCard: 
        john.doe@example.com
        , 
        loaded
      </div>
      <div
        data-testid="preferences-card"
      >
        PreferencesCard: 
        en
        , 
        loaded
      </div>
    </div>
  </div>
</div>
`;

exports[`Profile Component Rendering should render correctly with partial data 1`] = `
<div
  class="MuiBox-root css-2b0dhr"
  data-testid="profile-content-a7f8e4b2-9c3d-4a1e-8f6b-2d3e4a5b6c7d"
>
  <div
    class="MuiStack-root css-4otudh-MuiStack-root"
  >
    <div
      data-testid="profile-card"
    >
      ProfileCard: 
      John Doe
      , 
      null
      , 
      null
      , 
      null
      , 
      null
      ,
       
      loaded
    </div>
    <div
      data-testid="module-progress-card"
    >
      ModuleProgressCard: 
      0
       modules
    </div>
    <div
      data-testid="skills-discovered-card"
    >
      SkillsDiscoveredCard: 
      0
       skills, 
      loaded
    </div>
    <div
      class="MuiStack-root css-vtfvzf-MuiStack-root"
    >
      <div
        data-testid="security-card"
      >
        SecurityCard: 
        john@example.com
        , 
        loaded
      </div>
      <div
        data-testid="preferences-card"
      >
        PreferencesCard: 
        null
        , 
        loaded
      </div>
    </div>
  </div>
</div>
`;

exports[`Profile Component Rendering should render with null data showing 'Not available' 1`] = `
<div
  class="MuiBox-root css-2b0dhr"
  data-testid="profile-content-a7f8e4b2-9c3d-4a1e-8f6b-2d3e4a5b6c7d"
>
  <div
    class="MuiStack-root css-4otudh-MuiStack-root"
  >
    <div
      data-testid="profile-card"
    >
      ProfileCard: 
      null
      , 
      null
      , 
      null
      , 
      null
      , 
      null
      ,
       
      loaded
    </div>
    <div
      data-testid="module-progress-card"
    >
      ModuleProgressCard: 
      0
       modules
    </div>
    <div
      data-testid="skills-discovered-card"
    >
      SkillsDiscoveredCard: 
      0
       skills, 
      loaded
    </div>
    <div
      class="MuiStack-root css-vtfvzf-MuiStack-root"
    >
      <div
        data-testid="security-card"
      >
        SecurityCard: 
        null
        , 
        loaded
      </div>
      <div
        data-testid="preferences-card"
      >
        PreferencesCard: 
        null
        , 
        loaded
      </div>
    </div>
  </div>
</div>
`;
